@@ -1,17 +1,14 @@
 package uk.gov.di.ipv.core.processjourneystep;
 
 import com.amazonaws.services.lambda.runtime.Context;
-import com.fasterxml.jackson.core.type.TypeReference;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.nimbusds.oauth2.sdk.OAuth2Error;
+import org.apache.http.HttpStatus;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import uk.gov.di.ipv.core.library.domain.ApiGatewayTemplateMappingInput;
-import uk.gov.di.ipv.core.library.domain.ApiGatewayTemplateMappingOutput;
 import uk.gov.di.ipv.core.library.domain.ErrorResponse;
 import uk.gov.di.ipv.core.library.dto.ClientSessionDetailsDto;
 import uk.gov.di.ipv.core.library.helpers.SecureTokenHelper;
@@ -21,12 +18,7 @@ import uk.gov.di.ipv.core.library.service.IpvSessionService;
 import uk.gov.di.ipv.core.processjourneystep.statemachine.StateMachine;
 import uk.gov.di.ipv.core.processjourneystep.statemachine.StateMachineInitializer;
 
-import java.io.ByteArrayInputStream;
-import java.io.ByteArrayOutputStream;
-import java.io.IOException;
-import java.io.InputStream;
 import java.time.Instant;
-import java.util.Collections;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -34,12 +26,16 @@ import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static uk.gov.di.ipv.core.library.config.ConfigurationVariable.BACKEND_SESSION_TIMEOUT;
+import static uk.gov.di.ipv.core.library.helpers.StepFunctionHelpers.CODE;
+import static uk.gov.di.ipv.core.library.helpers.StepFunctionHelpers.IPV_SESSION_ID;
+import static uk.gov.di.ipv.core.library.helpers.StepFunctionHelpers.JOURNEY;
+import static uk.gov.di.ipv.core.library.helpers.StepFunctionHelpers.MESSAGE;
+import static uk.gov.di.ipv.core.library.helpers.StepFunctionHelpers.STATUS_CODE;
 
 @ExtendWith(MockitoExtension.class)
 class ProcessJourneyStepHandlerTest {
-    private static final String JOURNEY_STEP = "journeyStep";
     private static final String FAIL = "fail";
-    private static final String NEXT = "next";
+    private static final String NEXT = "/journey/next";
     private static final String ERROR = "error";
     private static final String ACCESS_DENIED = "access-denied";
     private static final String INVALID_STEP = "invalid-step";
@@ -82,8 +78,6 @@ class ProcessJourneyStepHandlerTest {
     @Mock private ConfigurationService mockConfigurationService;
 
     private ProcessJourneyStepHandler processJourneyStepHandler;
-    private final ObjectMapper objectMapper = new ObjectMapper();
-
     private ClientSessionDetailsDto clientSessionDetailsDto;
 
     @BeforeEach
@@ -96,190 +90,75 @@ class ProcessJourneyStepHandlerTest {
     }
 
     @Test
-    void shouldReturn400OnMissingParams() throws IOException {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Map.of("ipv-session-id", "1234"),
-                        Collections.emptyMap(),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    void shouldReturn400OnMissingJourneyStep() {
+        Map<String, String> input = Map.of(IPV_SESSION_ID, "1234");
 
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
 
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
-
-        assertEquals(400, lambdaOutput.getStatusCode());
-        assertEquals(
-                ErrorResponse.MISSING_JOURNEY_STEP_URL_PATH_PARAM.getCode(),
-                outputBody.get("code"));
-        assertEquals(
-                ErrorResponse.MISSING_JOURNEY_STEP_URL_PATH_PARAM.getMessage(),
-                outputBody.get("message"));
+        assertEquals(HttpStatus.SC_BAD_REQUEST, output.get(STATUS_CODE));
+        assertEquals(ErrorResponse.MISSING_JOURNEY_STEP.getCode(), output.get(CODE));
+        assertEquals(ErrorResponse.MISSING_JOURNEY_STEP.getMessage(), output.get(MESSAGE));
     }
 
     @Test
-    void shouldReturn400OnMissingJourneyStepParam() throws IOException {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Map.of("ipv-session-id", "1234"),
-                        Map.of("InvalidStep", "any"),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    void shouldReturn400OnMissingJourneyStepParam() {
+        Map<String, String> input = Map.of(JOURNEY, NEXT);
 
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
 
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
-
-        assertEquals(400, lambdaOutput.getStatusCode());
-        assertEquals(
-                ErrorResponse.MISSING_JOURNEY_STEP_URL_PATH_PARAM.getCode(),
-                outputBody.get("code"));
-        assertEquals(
-                ErrorResponse.MISSING_JOURNEY_STEP_URL_PATH_PARAM.getMessage(),
-                outputBody.get("message"));
+        assertEquals(HttpStatus.SC_BAD_REQUEST, output.get(STATUS_CODE));
+        assertEquals(ErrorResponse.MISSING_IPV_SESSION_ID.getCode(), output.get(CODE));
+        assertEquals(ErrorResponse.MISSING_IPV_SESSION_ID.getMessage(), output.get(MESSAGE));
     }
 
     @Test
-    void shouldReturn400OnMissingIpvSessionIdHeader() throws IOException {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Collections.emptyMap(),
-                        Map.of(JOURNEY_STEP, NEXT),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
-
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
-
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
-
-        assertEquals(400, lambdaOutput.getStatusCode());
-        assertEquals(ErrorResponse.MISSING_IPV_SESSION_ID.getCode(), outputBody.get("error"));
-        assertEquals(
-                ErrorResponse.MISSING_IPV_SESSION_ID.getMessage(),
-                outputBody.get("error_description"));
-    }
-
-    @Test
-    void shouldReturn400WhenInvalidSessionIdProvided() throws IOException {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Map.of("ipv-session-id", "1234"),
-                        Map.of(JOURNEY_STEP, NEXT),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    void shouldReturn400WhenInvalidSessionIdProvided() {
+        Map<String, String> input = Map.of(JOURNEY, NEXT, IPV_SESSION_ID, "1234");
 
         when(mockIpvSessionService.getIpvSession("1234")).thenReturn(null);
 
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
 
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
-
-        assertEquals(400, lambdaOutput.getStatusCode());
-        assertEquals(ErrorResponse.INVALID_SESSION_ID.getCode(), outputBody.get("code"));
-        assertEquals(ErrorResponse.INVALID_SESSION_ID.getMessage(), outputBody.get("message"));
+        assertEquals(HttpStatus.SC_BAD_REQUEST, output.get(STATUS_CODE));
+        assertEquals(ErrorResponse.INVALID_SESSION_ID.getCode(), output.get(CODE));
+        assertEquals(ErrorResponse.INVALID_SESSION_ID.getMessage(), output.get(MESSAGE));
     }
 
     @Test
-    void shouldReturn500WhenUnknownJourneyEngineStepProvided() throws IOException {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Map.of("ipv-session-id", "1234"),
-                        Map.of(JOURNEY_STEP, INVALID_STEP),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    void shouldReturn500WhenUnknownJourneyEngineStepProvided() {
+        Map<String, String> input = Map.of(JOURNEY, INVALID_STEP, IPV_SESSION_ID, "1234");
 
         mockIpvSessionItemAndTimeout(INITIAL_IPV_JOURNEY_STATE);
 
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
 
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
-
-        assertEquals(500, lambdaOutput.getStatusCode());
-        assertEquals(ErrorResponse.FAILED_JOURNEY_ENGINE_STEP.getCode(), outputBody.get("code"));
-        assertEquals(
-                ErrorResponse.FAILED_JOURNEY_ENGINE_STEP.getMessage(), outputBody.get("message"));
+        assertEquals(HttpStatus.SC_INTERNAL_SERVER_ERROR, output.get(STATUS_CODE));
+        assertEquals(ErrorResponse.FAILED_JOURNEY_ENGINE_STEP.getCode(), output.get(CODE));
+        assertEquals(ErrorResponse.FAILED_JOURNEY_ENGINE_STEP.getMessage(), output.get(MESSAGE));
     }
 
     @Test
-    void shouldReturn500WhenUserIsInUnknownState() throws IOException {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Map.of("ipv-session-id", "1234"),
-                        Map.of(JOURNEY_STEP, NEXT),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    void shouldReturn500WhenUserIsInUnknownState() {
+        Map<String, String> input = Map.of(JOURNEY, INVALID_STEP, IPV_SESSION_ID, "1234");
 
         mockIpvSessionItemAndTimeout("INVALID-STATE");
 
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
 
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
-
-        assertEquals(500, lambdaOutput.getStatusCode());
-        assertEquals(ErrorResponse.FAILED_JOURNEY_ENGINE_STEP.getCode(), outputBody.get("code"));
-        assertEquals(
-                ErrorResponse.FAILED_JOURNEY_ENGINE_STEP.getMessage(), outputBody.get("message"));
+        assertEquals(HttpStatus.SC_INTERNAL_SERVER_ERROR, output.get(STATUS_CODE));
+        assertEquals(ErrorResponse.FAILED_JOURNEY_ENGINE_STEP.getCode(), output.get(CODE));
+        assertEquals(ErrorResponse.FAILED_JOURNEY_ENGINE_STEP.getMessage(), output.get(MESSAGE));
     }
 
     @Test
-    void shouldReturnIdentityStartPageResponseWhenRequired() throws IOException {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Map.of("ipv-session-id", "1234"),
-                        Map.of(JOURNEY_STEP, NEXT),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    void shouldReturnIdentityStartPageResponseWhenRequired() {
+        Map<String, String> input = Map.of(JOURNEY, NEXT, IPV_SESSION_ID, "1234");
 
         mockIpvSessionItemAndTimeout(INITIAL_IPV_JOURNEY_STATE);
 
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
 
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
-
-        assertEquals(200, lambdaOutput.getStatusCode());
-        assertEquals(IPV_IDENTITY_START_PAGE, outputBody.get("page"));
+        assertEquals(IPV_IDENTITY_START_PAGE, output.get("page"));
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
@@ -289,55 +168,28 @@ class ProcessJourneyStepHandlerTest {
     }
 
     @Test
-    void shouldReturnEvaluateGpg45ScoresWhenIpvIdentityStartPageState() throws IOException {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Map.of("ipv-session-id", "1234"),
-                        Map.of(JOURNEY_STEP, NEXT),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    void shouldReturnEvaluateGpg45ScoresWhenIpvIdentityStartPageState() {
+        Map<String, String> input = Map.of(JOURNEY, NEXT, IPV_SESSION_ID, "1234");
 
         mockIpvSessionItemAndTimeout(IPV_IDENTITY_START_PAGE_STATE);
 
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
-
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(EVALUATE_GPG45_SCORES, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(200, lambdaOutput.getStatusCode());
-        assertEquals(JOURNEY_EVALUATE_GPG_45_SCORES, outputBody.get("journey"));
+        assertEquals(JOURNEY_EVALUATE_GPG_45_SCORES, output.get("journey"));
     }
 
     @Test
-    void shouldReturnRetrieveCriOAuthAccessTokenWhenCriUkPassportState() throws IOException {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Map.of("ipv-session-id", "1234"),
-                        Map.of(JOURNEY_STEP, NEXT),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    void shouldReturnRetrieveCriOAuthAccessTokenWhenCriUkPassportState() {
+        Map<String, String> input = Map.of(JOURNEY, NEXT, IPV_SESSION_ID, "1234");
 
         mockIpvSessionItemAndTimeout(CRI_UK_PASSPORT_STATE);
 
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
-
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
@@ -345,60 +197,32 @@ class ProcessJourneyStepHandlerTest {
         assertEquals(
                 RETRIEVE_CRI_OAUTH_ACCESS_TOKEN, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(200, lambdaOutput.getStatusCode());
-        assertEquals(JOURNEY_RETRIEVE_CRI_OAUTH_ACCESS_TOKEN, outputBody.get("journey"));
+        assertEquals(JOURNEY_RETRIEVE_CRI_OAUTH_ACCESS_TOKEN, output.get("journey"));
     }
 
     @Test
-    void shouldReturnCriErrorPageResponseIfPassportCriFails() throws IOException {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Map.of("ipv-session-id", "1234"),
-                        Map.of(JOURNEY_STEP, ERROR),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    void shouldReturnCriErrorPageResponseIfPassportCriFails() {
+        Map<String, String> input = Map.of(JOURNEY, ERROR, IPV_SESSION_ID, "1234");
 
         mockIpvSessionItemAndTimeout(CRI_UK_PASSPORT_STATE);
 
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
-
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(CRI_ERROR_STATE, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(200, lambdaOutput.getStatusCode());
-        assertEquals(PYI_TECHNICAL_ERROR_PAGE, outputBody.get("page"));
+        assertEquals(PYI_TECHNICAL_ERROR_PAGE, output.get("page"));
     }
 
     @Test
-    void shouldReturnRetrieveCriOAuthAccessTokenWhenCriAddressState() throws IOException {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Map.of("ipv-session-id", "1234"),
-                        Map.of(JOURNEY_STEP, NEXT),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    void shouldReturnRetrieveCriOAuthAccessTokenWhenCriAddressState() {
+        Map<String, String> input = Map.of(JOURNEY, NEXT, IPV_SESSION_ID, "1234");
 
         mockIpvSessionItemAndTimeout(CRI_ADDRESS_STATE);
 
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
-
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
@@ -406,50 +230,28 @@ class ProcessJourneyStepHandlerTest {
         assertEquals(
                 RETRIEVE_CRI_OAUTH_ACCESS_TOKEN, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(200, lambdaOutput.getStatusCode());
-        assertEquals(JOURNEY_RETRIEVE_CRI_OAUTH_ACCESS_TOKEN, outputBody.get("journey"));
+        assertEquals(JOURNEY_RETRIEVE_CRI_OAUTH_ACCESS_TOKEN, output.get("journey"));
     }
 
     @Test
-    void shouldReturnRetrieveCriCredentialsWhenValidateOAuthCallback() throws IOException {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Map.of("ipv-session-id", "1234"),
-                        Map.of(JOURNEY_STEP, NEXT),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    void shouldReturnRetrieveCriCredentialsWhenValidateOAuthCallback() {
+        Map<String, String> input = Map.of(JOURNEY, NEXT, IPV_SESSION_ID, "1234");
 
         mockIpvSessionItemAndTimeout(RETRIEVE_CRI_OAUTH_ACCESS_TOKEN);
 
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
-
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(RETRIEVE_CRI_CREDENTIAL, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(200, lambdaOutput.getStatusCode());
-        assertEquals(JOURNEY_RETRIEVE_CRI_CREDENTIAL, outputBody.get("journey"));
+        assertEquals(JOURNEY_RETRIEVE_CRI_CREDENTIAL, output.get("journey"));
     }
 
     @Test
-    void shouldReturnCriErrorPageResponseIfAddressCriFails() throws IOException {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Map.of("ipv-session-id", "1234"),
-                        Map.of(JOURNEY_STEP, ERROR),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    void shouldReturnCriErrorPageResponseIfAddressCriFails() {
+        Map<String, String> input = Map.of(JOURNEY, ERROR, IPV_SESSION_ID, "1234");
 
         IpvSessionItem ipvSessionItem = new IpvSessionItem();
         ipvSessionItem.setIpvSessionId(SecureTokenHelper.generate());
@@ -460,33 +262,19 @@ class ProcessJourneyStepHandlerTest {
         when(mockIpvSessionService.getIpvSession(anyString())).thenReturn(ipvSessionItem);
         when(mockConfigurationService.getSsmParameter(BACKEND_SESSION_TIMEOUT)).thenReturn("7200");
 
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
-
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(CRI_ERROR_STATE, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(200, lambdaOutput.getStatusCode());
-        assertEquals(PYI_TECHNICAL_ERROR_PAGE, outputBody.get("page"));
+        assertEquals(PYI_TECHNICAL_ERROR_PAGE, output.get("page"));
     }
 
     @Test
-    void shouldReturnRetrieveCriOAuthAccessTokenWhenCriFraudState() throws IOException {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Map.of("ipv-session-id", "1234"),
-                        Map.of(JOURNEY_STEP, NEXT),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    void shouldReturnRetrieveCriOAuthAccessTokenWhenCriFraudState() {
+        Map<String, String> input = Map.of(JOURNEY, NEXT, IPV_SESSION_ID, "1234");
 
         IpvSessionItem ipvSessionItem = new IpvSessionItem();
         ipvSessionItem.setIpvSessionId(SecureTokenHelper.generate());
@@ -497,13 +285,7 @@ class ProcessJourneyStepHandlerTest {
         when(mockIpvSessionService.getIpvSession(anyString())).thenReturn(ipvSessionItem);
         when(mockConfigurationService.getSsmParameter(BACKEND_SESSION_TIMEOUT)).thenReturn("7200");
 
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
-
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
@@ -511,30 +293,19 @@ class ProcessJourneyStepHandlerTest {
         assertEquals(
                 RETRIEVE_CRI_OAUTH_ACCESS_TOKEN, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(200, lambdaOutput.getStatusCode());
-        assertEquals(JOURNEY_RETRIEVE_CRI_OAUTH_ACCESS_TOKEN, outputBody.get("journey"));
+        assertEquals(JOURNEY_RETRIEVE_CRI_OAUTH_ACCESS_TOKEN, output.get("journey"));
     }
 
     @Test
-    void shouldReturnPreKbvTransitionPageResponseWhenRequired() throws IOException {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Map.of("ipv-session-id", "1234"),
-                        Map.of(JOURNEY_STEP, "kbv"),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    void shouldReturnPreKbvTransitionPageResponseWhenRequired() {
+        Map<String, String> input =
+                Map.of(
+                        JOURNEY, "kbv",
+                        IPV_SESSION_ID, "1234");
 
         mockIpvSessionItemAndTimeout(SELECT_CRI_STATE);
 
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
-
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
@@ -542,50 +313,28 @@ class ProcessJourneyStepHandlerTest {
         assertEquals(
                 PRE_KBV_TRANSITION_PAGE_STATE, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(200, lambdaOutput.getStatusCode());
-        assertEquals(PRE_KBV_TRANSITION_PAGE, outputBody.get("page"));
+        assertEquals(PRE_KBV_TRANSITION_PAGE, output.get("page"));
     }
 
     @Test
-    void shouldReturnCriKbvJourneyResponseWhenRequired() throws IOException {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Map.of("ipv-session-id", "1234"),
-                        Map.of(JOURNEY_STEP, NEXT),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    void shouldReturnCriKbvJourneyResponseWhenRequired() {
+        Map<String, String> input = Map.of(JOURNEY, NEXT, IPV_SESSION_ID, "1234");
 
         mockIpvSessionItemAndTimeout(PRE_KBV_TRANSITION_PAGE_STATE);
 
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
-
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(CRI_KBV_STATE, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(200, lambdaOutput.getStatusCode());
-        assertEquals("/journey/cri/build-oauth-request/kbv", outputBody.get("journey"));
+        assertEquals("/journey/cri/build-oauth-request/kbv", output.get("journey"));
     }
 
     @Test
-    void shouldReturnCriErrorPageResponseIfFraudCriFails() throws IOException {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Map.of("ipv-session-id", "1234"),
-                        Map.of(JOURNEY_STEP, ERROR),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    void shouldReturnCriErrorPageResponseIfFraudCriFails() {
+        Map<String, String> input = Map.of(JOURNEY, ERROR, IPV_SESSION_ID, "1234");
 
         IpvSessionItem ipvSessionItem = new IpvSessionItem();
         ipvSessionItem.setIpvSessionId(SecureTokenHelper.generate());
@@ -596,43 +345,23 @@ class ProcessJourneyStepHandlerTest {
         when(mockIpvSessionService.getIpvSession(anyString())).thenReturn(ipvSessionItem);
         when(mockConfigurationService.getSsmParameter(BACKEND_SESSION_TIMEOUT)).thenReturn("7200");
 
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
-
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(CRI_ERROR_STATE, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(200, lambdaOutput.getStatusCode());
-        assertEquals(PYI_TECHNICAL_ERROR_PAGE, outputBody.get("page"));
+        assertEquals(PYI_TECHNICAL_ERROR_PAGE, output.get("page"));
     }
 
     @Test
-    void shouldReturnRetrieveCriOAuthAccessTokenWhenCriKbvState() throws IOException {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Map.of("ipv-session-id", "1234"),
-                        Map.of(JOURNEY_STEP, NEXT),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    void shouldReturnRetrieveCriOAuthAccessTokenWhenCriKbvState() {
+        Map<String, String> input = Map.of(JOURNEY, NEXT, IPV_SESSION_ID, "1234");
 
         mockIpvSessionItemAndTimeout(CRI_KBV_STATE);
 
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
-
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
@@ -640,382 +369,204 @@ class ProcessJourneyStepHandlerTest {
         assertEquals(
                 RETRIEVE_CRI_OAUTH_ACCESS_TOKEN, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(200, lambdaOutput.getStatusCode());
-        assertEquals(JOURNEY_RETRIEVE_CRI_OAUTH_ACCESS_TOKEN, outputBody.get("journey"));
+        assertEquals(JOURNEY_RETRIEVE_CRI_OAUTH_ACCESS_TOKEN, output.get("journey"));
     }
 
     @Test
-    void shouldReturnEvaluateGpg45ScoresWhenRetrieveCriCredentialState() throws IOException {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Map.of("ipv-session-id", "1234"),
-                        Map.of(JOURNEY_STEP, NEXT),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    void shouldReturnEvaluateGpg45ScoresWhenRetrieveCriCredentialState() {
+        Map<String, String> input = Map.of(JOURNEY, NEXT, IPV_SESSION_ID, "1234");
 
         mockIpvSessionItemAndTimeout(RETRIEVE_CRI_CREDENTIAL);
 
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
-
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(EVALUATE_GPG45_SCORES, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(200, lambdaOutput.getStatusCode());
-        assertEquals(JOURNEY_EVALUATE_GPG_45_SCORES, outputBody.get("journey"));
+        assertEquals(JOURNEY_EVALUATE_GPG_45_SCORES, output.get("journey"));
     }
 
     @Test
-    void shouldReturnCriErrorPageResponseIfKbvCriFails() throws IOException {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Map.of("ipv-session-id", "1234"),
-                        Map.of(JOURNEY_STEP, ERROR),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    void shouldReturnCriErrorPageResponseIfKbvCriFails() {
+        Map<String, String> input = Map.of(JOURNEY, ERROR, IPV_SESSION_ID, "1234");
 
         mockIpvSessionItemAndTimeout(CRI_KBV_STATE);
 
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
-
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(CRI_ERROR_STATE, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(200, lambdaOutput.getStatusCode());
-        assertEquals(PYI_TECHNICAL_ERROR_PAGE, outputBody.get("page"));
+        assertEquals(PYI_TECHNICAL_ERROR_PAGE, output.get("page"));
     }
 
     @Test
-    void shouldReturnEndSessionJourneyResponseWhenRequired() throws IOException {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Map.of("ipv-session-id", "1234"),
-                        Map.of(JOURNEY_STEP, NEXT),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    void shouldReturnEndSessionJourneyResponseWhenRequired() {
+        Map<String, String> input = Map.of(JOURNEY, NEXT, IPV_SESSION_ID, "1234");
 
         mockIpvSessionItemAndTimeout(IPV_SUCCESS_PAGE_STATE);
 
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
-
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(END_STATE, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(200, lambdaOutput.getStatusCode());
-        assertEquals("/journey/build-client-oauth-response", outputBody.get("journey"));
+        assertEquals("/journey/build-client-oauth-response", output.get("journey"));
     }
 
     @Test
-    void shouldReturnDebugEvaluateGpg45ScoresJourneyWhenRequired() throws IOException {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Map.of("ipv-session-id", "1234"),
-                        Map.of(JOURNEY_STEP, NEXT),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    void shouldReturnDebugEvaluateGpg45ScoresJourneyWhenRequired() {
+        Map<String, String> input = Map.of(JOURNEY, NEXT, IPV_SESSION_ID, "1234");
 
         mockIpvSessionItemAndTimeout(DEBUG_RETRIEVE_CRI_CREDENTIAL_STATE);
 
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
-
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(DEBUG_EVALUATE_GPG45_SCORES, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(200, lambdaOutput.getStatusCode());
-        assertEquals("/journey/evaluate-gpg45-scores", outputBody.get("journey"));
+        assertEquals("/journey/evaluate-gpg45-scores", output.get("journey"));
     }
 
     @Test
-    void shouldReturnPYITechnicalPageIfErrorOccursOnDebugJourney() throws IOException {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Map.of("ipv-session-id", "1234"),
-                        Map.of(JOURNEY_STEP, ERROR),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    void shouldReturnPYITechnicalPageIfErrorOccursOnDebugJourney() {
+        Map<String, String> input = Map.of(JOURNEY, ERROR, IPV_SESSION_ID, "1234");
 
         mockIpvSessionItemAndTimeout(DEBUG_PAGE_STATE);
 
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
-
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(CRI_ERROR_STATE, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(200, lambdaOutput.getStatusCode());
-        assertEquals(PYI_TECHNICAL_ERROR_PAGE, outputBody.get("page"));
+        assertEquals(PYI_TECHNICAL_ERROR_PAGE, output.get("page"));
     }
 
     @Test
-    void shouldReturnPYINoMatchPageIfErrorOccursOnDebugJourney() throws IOException {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Map.of("ipv-session-id", "1234"),
-                        Map.of(JOURNEY_STEP, FAIL),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    void shouldReturnPYINoMatchPageIfErrorOccursOnDebugJourney() {
+        Map<String, String> input = Map.of(JOURNEY, FAIL, IPV_SESSION_ID, "1234");
 
         mockIpvSessionItemAndTimeout(DEBUG_PAGE_STATE);
 
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
-
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(PYI_NO_MATCH_STATE, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(200, lambdaOutput.getStatusCode());
-        assertEquals(PYI_NO_MATCH_PAGE, outputBody.get("page"));
+        assertEquals(PYI_NO_MATCH_PAGE, output.get("page"));
     }
 
     @Test
-    void shouldReturnErrorPageResponseWhenRequired() throws IOException {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Map.of("ipv-session-id", "1234"),
-                        Map.of(JOURNEY_STEP, NEXT),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    void shouldReturnErrorPageResponseWhenRequired() {
+        Map<String, String> input = Map.of(JOURNEY, NEXT, IPV_SESSION_ID, "1234");
 
         mockIpvSessionItemAndTimeout(CRI_ERROR_STATE);
 
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
-
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(END_STATE, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(200, lambdaOutput.getStatusCode());
-        assertEquals("/journey/build-client-oauth-response", outputBody.get("journey"));
+        assertEquals("/journey/build-client-oauth-response", output.get("journey"));
     }
 
     @Test
-    void shouldReturnPYINoMatchPageIfPassportCriVCValidationReturnsFail() throws IOException {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Map.of("ipv-session-id", "1234"),
-                        Map.of(JOURNEY_STEP, FAIL),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    void shouldReturnPYINoMatchPageIfPassportCriVCValidationReturnsFail() {
+        Map<String, String> input = Map.of(JOURNEY, FAIL, IPV_SESSION_ID, "1234");
 
         mockIpvSessionItemAndTimeout(CRI_UK_PASSPORT_STATE);
 
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
-
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(PYI_NO_MATCH_STATE, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(200, lambdaOutput.getStatusCode());
-        assertEquals(PYI_NO_MATCH_PAGE, outputBody.get("page"));
+        assertEquals(PYI_NO_MATCH_PAGE, output.get("page"));
     }
 
     @Test
-    void shouldReturnPYINoMatchPageIfFraudCriVCValidationReturnsFail() throws IOException {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Map.of("ipv-session-id", "1234"),
-                        Map.of(JOURNEY_STEP, FAIL),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    void shouldReturnPYINoMatchPageIfFraudCriVCValidationReturnsFail() {
+        Map<String, String> input = Map.of(JOURNEY, FAIL, IPV_SESSION_ID, "1234");
 
         mockIpvSessionItemAndTimeout(CRI_FRAUD_STATE);
 
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
-
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(PYI_NO_MATCH_STATE, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(200, lambdaOutput.getStatusCode());
-        assertEquals(PYI_NO_MATCH_PAGE, outputBody.get("page"));
+        assertEquals(PYI_NO_MATCH_PAGE, output.get("page"));
     }
 
     @Test
-    void shouldReturnPYIKbvFailPageIfKbvCriVCValidationReturnsFail() throws IOException {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Map.of("ipv-session-id", "1234"),
-                        Map.of(JOURNEY_STEP, FAIL),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    void shouldReturnPYIKbvFailPageIfKbvCriVCValidationReturnsFail() {
+        Map<String, String> input = Map.of(JOURNEY, FAIL, IPV_SESSION_ID, "1234");
 
         mockIpvSessionItemAndTimeout(CRI_KBV_STATE);
 
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
-
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(PYI_KBV_FAIL_STATE, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(200, lambdaOutput.getStatusCode());
-        assertEquals(PYI_KBV_FAIL_PAGE, outputBody.get("page"));
+        assertEquals(PYI_KBV_FAIL_PAGE, output.get("page"));
     }
 
     @Test
-    void shouldReturnPyiNoMatchPageIfInSelectCRIStateAndRetursPyiNoMatchJourney()
-            throws IOException {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Map.of("ipv-session-id", "1234"),
-                        Map.of(JOURNEY_STEP, PYI_NO_MATCH_PAGE),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    void shouldReturnPyiNoMatchPageIfInSelectCRIStateAndRetursPyiNoMatchJourney() {
+        Map<String, String> input = Map.of(JOURNEY, PYI_NO_MATCH_PAGE, IPV_SESSION_ID, "1234");
 
         mockIpvSessionItemAndTimeout(SELECT_CRI_STATE);
 
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
-
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(PYI_NO_MATCH_STATE, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(200, lambdaOutput.getStatusCode());
-        assertEquals(PYI_NO_MATCH_PAGE, outputBody.get("page"));
+        assertEquals(PYI_NO_MATCH_PAGE, output.get("page"));
     }
 
     @Test
-    void shouldReturnEvaluateGpg45ScoresJourneyIfInDcmawStateReturnsAccessDeniedResponse()
-            throws IOException {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Map.of("ipv-session-id", "1234"),
-                        Map.of(JOURNEY_STEP, ACCESS_DENIED),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    void shouldReturnEvaluateGpg45ScoresJourneyIfInDcmawStateReturnsAccessDeniedResponse() {
+        Map<String, String> input = Map.of(JOURNEY, ACCESS_DENIED, IPV_SESSION_ID, "1234");
 
         mockIpvSessionItemAndTimeout(CRI_DCMAW_STATE);
 
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
-
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(EVALUATE_GPG45_SCORES, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(200, lambdaOutput.getStatusCode());
-        assertEquals("/journey/evaluate-gpg45-scores", outputBody.get("journey"));
+        assertEquals("/journey/evaluate-gpg45-scores", output.get("journey"));
     }
 
     @Test
-    void shouldReturnErrorPageIfSessionHasExpired() throws Exception {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Map.of("ipv-session-id", "1234"),
-                        Map.of(JOURNEY_STEP, NEXT),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    void shouldReturnErrorPageIfSessionHasExpired() {
+        Map<String, String> input = Map.of(JOURNEY, NEXT, IPV_SESSION_ID, "1234");
 
         IpvSessionItem ipvSessionItem = new IpvSessionItem();
         ipvSessionItem.setIpvSessionId(SecureTokenHelper.generate());
@@ -1028,13 +579,7 @@ class ProcessJourneyStepHandlerTest {
         when(mockConfigurationService.getSsmParameter(BACKEND_SESSION_TIMEOUT)).thenReturn("99");
         when(mockIpvSessionService.getIpvSession("1234")).thenReturn(ipvSessionItem);
 
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
-
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
@@ -1047,20 +592,12 @@ class ProcessJourneyStepHandlerTest {
                 OAuth2Error.ACCESS_DENIED.getDescription(),
                 capturedIpvSessionItem.getErrorDescription());
 
-        assertEquals(200, lambdaOutput.getStatusCode());
-        assertEquals(PYI_TECHNICAL_ERROR_PAGE, outputBody.get("page"));
+        assertEquals(PYI_TECHNICAL_ERROR_PAGE, output.get("page"));
     }
 
     @Test
-    void shouldReturnSessionEndJourneyIfStateIsSessionTimeout() throws Exception {
-        var input =
-                new ApiGatewayTemplateMappingInput(
-                        Map.of("input", "body"),
-                        Map.of("ipv-session-id", "1234"),
-                        Map.of(JOURNEY_STEP, NEXT),
-                        Collections.emptyMap());
-        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+    void shouldReturnSessionEndJourneyIfStateIsSessionTimeout() {
+        Map<String, String> input = Map.of(JOURNEY, NEXT, IPV_SESSION_ID, "1234");
 
         IpvSessionItem ipvSessionItem = new IpvSessionItem();
         ipvSessionItem.setIpvSessionId(SecureTokenHelper.generate());
@@ -1071,21 +608,14 @@ class ProcessJourneyStepHandlerTest {
         when(mockIpvSessionService.getIpvSession(anyString())).thenReturn(ipvSessionItem);
         when(mockIpvSessionService.getIpvSession("1234")).thenReturn(ipvSessionItem);
 
-        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
-
-        ApiGatewayTemplateMappingOutput lambdaOutput =
-                objectMapper.readValue(
-                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
-        Map<String, Object> outputBody =
-                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(END_STATE, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(200, lambdaOutput.getStatusCode());
-        assertEquals("/journey/build-client-oauth-response", outputBody.get("journey"));
+        assertEquals("/journey/build-client-oauth-response", output.get("journey"));
     }
 
     private void mockIpvSessionItemAndTimeout(String validateOauthCallback) {
